syntax = "proto3";

option csharp_namespace = "GrpcPersons";

package PersonsApi;

service PersonsGrpc {
  rpc CreatePerson(CreatePersonCommand) returns (CreatedPersonDto) {}
  rpc GetPersons(GetPersonsCommand) returns (GetPersonsResponse) {}
}

message CreatePersonCommand {
  string IdentityGuid = 1;
  string Username = 2;
  string FirstName = 3;
  string LastName = 4;
  string KnownAs = 5;
  string Bio = 6;
}

message CreatedPersonDto {
  string IdentityGuid = 1;
  string Username = 2;
  string FirstName = 3;
  string LastName = 4;
  string KnownAs = 5;
  string Bio = 6;
}

message GetPersonsCommand {
  string test = 1;
}

message GetPersonsResponse {
  repeated CreatedPersonDto items = 1;
}